syntax = "proto3";

option csharp_namespace = "LibplanetConsole.Evidence.Grpc";

package libplanet.console.evidence.v1;

import "google/protobuf/timestamp.proto";

service EvidenceGrpcService {
  rpc AddEvidence(AddEvidenceRequest) returns (AddEvidenceResponse);
  rpc GetEvidence(GetEvidenceRequest) returns (GetEvidenceResponse);
  rpc GetPendingEvidence(GetPendingEvidenceRequest) returns (GetPendingEvidenceResponse);
  rpc Violate(ViolateRequest) returns (ViolateResponse);
}

message EvidenceInfoProto {
    string type = 1;
    string id = 2;
    string targetAddress = 3;
    int64 height = 4;
    google.protobuf.Timestamp timestamp = 5;
    string genesisHash = 6;
    string tipHash = 7;
    bool isRunning = 8;
}

message AddEvidenceRequest {
}

message AddEvidenceResponse {
  string evidence_id = 1;
}

message GetEvidenceRequest {
  oneof request {
    int64 height = 1;
    string evidence_id = 2;
  }
}

message GetEvidenceResponse {
  repeated EvidenceInfoProto evidence_infos = 1;
}

message GetPendingEvidenceRequest {
  string evidence_id = 1;
}

message GetPendingEvidenceResponse {
  repeated EvidenceInfoProto evidence_infos = 1;
}

message ViolateRequest {
  string type = 1;
}

message ViolateResponse {
}
